mi primera confirmación de  actualización

--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,11 @@ footer {
   align-items: center;
 } 
 
+.greeting { 
+  text-align: center; 
+  }
+  
+
 /* Media Queries */
 
 @media (max-width: 767px) {
